Add a few reference for uniqueness

--- a/All.bib
+++ b/All.bib
@@ -17961,6 +17961,58 @@
   mrreviewer	= {C. J. K. Batty}
 }
 
+@InCollection{	  engelbert.schmidt:81:on,
+  author	= {Engelbert, H. J. and Schmidt, W.},
+  title		= {On the behaviour of certain functionals of the {W}iener
+		  process and applications to stochastic differential
+		  equations},
+  booktitle	= {Stochastic differential systems ({V}isegr\'{a}d, 1980)},
+  series	= {Lecture Notes in Control and Information Sci.},
+  volume	= {36},
+  pages		= {47--55},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1981},
+  mrclass	= {60J65 (60H10)},
+  mrnumber	= {653645},
+  mrreviewer	= {Constantin Tudor}
+}
+
+@Article{	  engelbert.schmidt:84:on,
+  author	= {Engelbert, H. J. and Schmidt, W.},
+  title		= {On exponential local martingales connected with diffusion
+		  processes},
+  journal	= {Math. Nachr.},
+  fjournal	= {Mathematische Nachrichten},
+  volume	= {119},
+  year		= {1984},
+  pages		= {97--115},
+  issn		= {0025-584X},
+  mrclass	= {60G44 (60J60)},
+  mrnumber	= {774179},
+  mrreviewer	= {Dominique L\'{e}pingle},
+  doi		= {10.1002/mana.19841190108},
+  url		= {https://doi.org/10.1002/mana.19841190108}
+}
+
+@Article{	  engelbert.schmidt:85:on,
+  author	= {Engelbert, H. J. and Schmidt, W.},
+  title		= {On solutions of one-dimensional stochastic differential
+		  equations without drift},
+  journal	= {Z. Wahrsch. Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {68},
+  year		= {1985},
+  number	= {3},
+  pages		= {287--314},
+  issn		= {0044-3719},
+  mrclass	= {60H10},
+  mrnumber	= {771468},
+  mrreviewer	= {M. M\'{e}tivier},
+  doi		= {10.1007/BF00532642},
+  url		= {https://doi.org/10.1007/BF00532642}
+}
+
 @Article{	  englander:08:quenched,
   author	= {Engl\"{a}nder, J\'{a}nos},
   title		= {Quenched law of large numbers for branching {B}rownian
@@ -42720,6 +42772,21 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
+}
+
+@InCollection{	  perkins:82:local*1,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
