Fix two entries with abreviated first names.

--- a/All.bib
+++ b/All.bib
@@ -8498,6 +8498,24 @@
   url		= {https://doi.org/10.1007/978-3-319-11970-0_9}
 }
 
+@Book{		  celledoni.di-nunno.ea:18:computation,
+  title		= {Computation and combinatorics in dynamics, stochastics and
+		  control},
+  series	= {Abel Symposia},
+  volume	= {13},
+  author	= {Celledoni, Elena and Di Nunno, Giulia and Ebrahimi-Fard,
+		  Kurusch and Munthe-Kaas, Hans Zanna},
+  note		= {The Abel Symposium, Rosendal, Norway, August 2016},
+  publisher	= {Springer, Cham},
+  year		= {2018},
+  pages		= {xi+737},
+  isbn		= {978-3-030-01592-3; 978-3-030-01593-0},
+  mrclass	= {00B25 (16T05 60Hxx 93C10)},
+  mrnumber	= {3966458},
+  doi		= {10.1007/978-3-030-01593-0},
+  url		= {https://doi.org/10.1007/978-3-030-01593-0}
+}
+
 @Article{	  cenesiz.kurt.ea:17:stochastic,
   author	= {\c{C}enesiz, Y\"{u}cel and Kurt, Ali and Nane, Erkan},
   title		= {Stochastic solutions of conformable fractional {C}auchy
@@ -17749,7 +17767,7 @@
 }
 
 @Article{	  eckmann.hairer:01:invariant,
-  author	= {Eckmann, J.-P. and Hairer, M.},
+  author	= {Eckmann, Jean-Pierre and Hairer, Martin},
   title		= {Invariant measures for stochastic partial differential
 		  equations in unbounded domains},
   journal	= {Nonlinearity},
@@ -45705,7 +45723,7 @@
 }
 
 @InCollection{	  sanz-sole.sarra:02:holder,
-  author	= {Sanz-Sol\'{e}, M. and Sarr\`a, M.},
+  author	= {Sanz-Sol\'{e}, Marta and Sarr\`a, M\`onica},
   title		= {H\"{o}lder continuity for the stochastic heat equation
 		  with spatially correlated noise},
   booktitle	= {Seminar on {S}tochastic {A}nalysis, {R}andom {F}ields and
