Add Lieb's book

--- a/All.bib
+++ b/All.bib
@@ -33173,6 +33173,22 @@
   mrreviewer	= {E. J. Verboven}
 }
 
+@Book{		  lieb.loss:01:analysis,
+  author	= {Lieb, Elliott H. and Loss, Michael},
+  title		= {Analysis},
+  series	= {Graduate Studies in Mathematics},
+  volume	= {14},
+  edition	= {Second},
+  publisher	= {American Mathematical Society, Providence, RI},
+  year		= {2001},
+  pages		= {xxii+346},
+  isbn		= {0-8218-2783-9},
+  mrclass	= {00A05 (26-01 28-01 31-01 35J10 42-01)},
+  mrnumber	= {1817225},
+  doi		= {10.1090/gsm/014},
+  url		= {https://doi.org/10.1090/gsm/014}
+}
+
 @Article{	  lieb.thomas:97:exact,
   author	= {Lieb, Elliott H. and Thomas, Lawrence E.},
   title		= {Exact ground state energy of the strong-coupling polaron},
