Add Brosamler paper

--- a/All.bib
+++ b/All.bib
@@ -7055,6 +7055,25 @@
   url		= {http://projecteuclid.org/euclid.pjm/1102637666}
 }
 
+@Article{	  brosamler:83:laws,
+  author	= {Brosamler, G. A.},
+  title		= {Laws of the iterated logarithm for {B}rownian motions on
+		  compact manifolds},
+  journal	= {Z. Wahrsch. Verw. Gebiete},
+  fjournal	= {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und
+		  Verwandte Gebiete},
+  volume	= {65},
+  year		= {1983},
+  number	= {1},
+  pages		= {99--114},
+  issn		= {0044-3719},
+  mrclass	= {58G32 (60J65)},
+  mrnumber	= {717936},
+  mrreviewer	= {Jean-Louis Ducourtioux},
+  doi		= {10.1007/BF00534997},
+  url		= {https://doi.org/10.1007/BF00534997}
+}
+
 @Article{	  brownlees.nualart.ea:18:realized,
   author	= {Brownlees, Christian and Nualart, Eul\`alia and Sun,
 		  Yucheng},
