Add two books by Treves on PDEs

--- a/All.bib
+++ b/All.bib
@@ -50030,6 +50030,35 @@
   url		= {http://projecteuclid.org/euclid.cmp/1104248587}
 }
 
+@Book{		  treves:22:analytic,
+  author	= {Treves, Fran\c{c}ois},
+  title		= {Analytic partial differential equations},
+  series	= {Grundlehren der mathematischen Wissenschaften [Fundamental
+		  Principles of Mathematical Sciences]},
+  volume	= {359},
+  publisher	= {Springer, Cham},
+  year		= {[2022] \copyright 2022},
+  pages		= {xiii+1228},
+  isbn		= {978-3-030-94054-6; 978-3-030-94055-3},
+  mrclass	= {35-02 (35A01 35A09 35A10 46-02)},
+  mrnumber	= {4436039},
+  doi		= {10.1007/978-3-030-94055-3},
+  url		= {https://doi.org/10.1007/978-3-030-94055-3}
+}
+
+@Book{		  treves:75:basic,
+  author	= {Tr\`eves, Fran\c{c}ois},
+  title		= {Basic linear partial differential equations},
+  series	= {Pure and Applied Mathematics, Vol. 62},
+  publisher	= {Academic Press [Harcourt Brace Jovanovich, Publishers],
+		  New York-London},
+  year		= {1975},
+  pages		= {xvii+470},
+  mrclass	= {35-02},
+  mrnumber	= {0447753},
+  mrreviewer	= {Jeffrey Rauch}
+}
+
 @Article{	  tribe:96:travelling,
   author	= {Tribe, Roger},
   title		= {A travelling wave solution to the {K}olmogorov equation
